[project]
name = "lookup-moderator"
version = "0.1.0"
description = "A Python-based moderation system for Nostr relays running strfry"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nostr Network", email = "nostr-net@example.com"}
]
keywords = ["nostr", "moderation", "strfry", "relay", "wot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications",
    "Topic :: Internet",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nostr-sdk>=0.35.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nostr-net/lookup-moderator"
Repository = "https://github.com/nostr-net/lookup-moderator"
Issues = "https://github.com/nostr-net/lookup-moderator/issues"

[project.scripts]
lookup-moderator = "lookup_moderator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
